# h_w

./: .clang-format  .gitignore
src/: main.cpp
task02/: CMakeLists.txt  test.cpp
task02/src/: guess.cc  guess.h  main.cpp
task02/test/: test.cc  test.h
task03/: data.h
task03/src/: csv.h  main.cc
